feat(backend): real mission creation + server-side anti-overbooking
POST /api/missions was a stub returning an empty Mission with 201 and
persisting nothing. Missions could therefore never exist, and no overlap
was ever checked anywhere.

- MissionService.createMission now persists, moves vehicle/driver to
  RESERVE and writes an audit event
- ANTI-OVERBOOKING enforced in the service (not the controller), so a raw
  HTTP call cannot bypass it: a vehicle or a driver cannot be booked on two
  overlapping active missions. Closed missions free the slot.
- ConflictException -> HTTP 409 carrying the conflicting missions and a list
  of genuinely free alternative vehicles of the same type
- start/return/validate implemented with state-machine guards (invalid
  transitions -> 409) and counter validation (return km >= departure km)
- MissionRepository: JPQL overlap queries + busy-vehicle lookup
- AuditService was an empty method body; it now records events
- MissionResponse DTO flattens vehicle/driver for the frontend

Security fixes found while probing the live API:
- GET /api/users leaked bcrypt password hashes (raw entity) -> UserResponse
- authorization failures returned 500 (AccessDenied swallowed by the generic
  handler) and 401 elsewhere -> now a proper 403, so the frontend can tell
  "forbidden" from "session expired"
- SecurityConfig contradicted the controllers' @PreAuthorize (a CONDUCTEUR
  got 401 on GET /api/vehicles); @PreAuthorize is now the single source of
  truth for authorization

Tests: 10 integration tests on the real H2 database, all green, including
the specification scenario (vehicle booked 01->10 rejected for 05->15).

Co-Authored-By: Claude Opus 5 <noreply@anthropic.com>