@@ -1,9 +1,9 @@
 package com.smartfleet.smartfleet.config;
 
+import com.smartfleet.smartfleet.security.TokenAuthFilter;
 import org.springframework.beans.factory.annotation.Value;
 import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
-import org.springframework.http.HttpMethod;
 import org.springframework.security.config.annotation.method.configuration.EnableMethodSecurity;
 import org.springframework.security.config.annotation.web.builders.HttpSecurity;
 import org.springframework.security.config.annotation.web.configuration.EnableWebSecurity;
@@ -12,16 +12,18 @@ import org.springframework.security.crypto.bcrypt.BCryptPasswordEncoder;
 import org.springframework.security.crypto.password.PasswordEncoder;
 import org.springframework.security.web.SecurityFilterChain;
 import org.springframework.security.web.authentication.UsernamePasswordAuthenticationFilter;
-import com.smartfleet.smartfleet.security.TokenAuthFilter;
 import org.springframework.web.cors.CorsConfiguration;
 import org.springframework.web.cors.CorsConfigurationSource;
 import org.springframework.web.cors.UrlBasedCorsConfigurationSource;
+
 import java.util.Arrays;
+import java.util.List;
 
 @Configuration
 @EnableWebSecurity
 @EnableMethodSecurity(prePostEnabled = true)
 public class SecurityConfig {
+
     private final TokenAuthFilter tokenAuthFilter;
 
     public SecurityConfig(TokenAuthFilter tokenAuthFilter) {
@@ -40,8 +42,8 @@ public class SecurityConfig {
     public CorsConfigurationSource corsConfigurationSource() {
         CorsConfiguration configuration = new CorsConfiguration();
         configuration.setAllowedOrigins(Arrays.asList(allowedOrigins.split(",")));
-        configuration.setAllowedMethods(Arrays.asList("GET", "POST", "PUT", "DELETE", "OPTIONS"));
-        configuration.setAllowedHeaders(Arrays.asList("*"));
+        configuration.setAllowedMethods(List.of("GET", "POST", "PUT", "PATCH", "DELETE", "OPTIONS"));
+        configuration.setAllowedHeaders(List.of("*"));
         configuration.setAllowCredentials(true);
 
         UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
@@ -49,6 +51,13 @@ public class SecurityConfig {
         return source;
     }
 
+    /**
+     * Regles d'acces. Volontairement minimalistes ici : l'autorisation fine est
+     * portee par les @PreAuthorize des controleurs, qui sont la source unique de
+     * verite. Auparavant les deux se contredisaient (ex. GET /api/vehicles etait
+     * interdit au CONDUCTEUR ici mais autorise sur le controleur), ce qui
+     * produisait des 401 sur des routes pourtant legitimes.
+     */
     @Bean
     public SecurityFilterChain securityFilterChain(HttpSecurity http) throws Exception {
         http
@@ -56,23 +65,11 @@ public class SecurityConfig {
             .csrf(csrf -> csrf.disable())
             .sessionManagement(session -> session.sessionCreationPolicy(SessionCreationPolicy.STATELESS))
             .authorizeHttpRequests(auth -> auth
-                .requestMatchers("/api/auth/**").permitAll()
-                .requestMatchers("/actuator/**").permitAll()
-                .requestMatchers(HttpMethod.GET, "/api/vehicles").hasAnyRole("ADMIN", "GESTIONNAIRE")
-                .requestMatchers(HttpMethod.POST, "/api/vehicles").hasAnyRole("ADMIN", "GESTIONNAIRE")
-                .requestMatchers(HttpMethod.GET, "/api/drivers").hasAnyRole("ADMIN", "GESTIONNAIRE")
-                .requestMatchers(HttpMethod.POST, "/api/drivers").hasAnyRole("ADMIN", "GESTIONNAIRE")
-                .requestMatchers(HttpMethod.POST, "/api/missions").hasAnyRole("ADMIN", "GESTIONNAIRE")
-                .requestMatchers(HttpMethod.GET, "/api/missions").hasAnyRole("ADMIN", "GESTIONNAIRE")
-                .requestMatchers(HttpMethod.GET, "/api/missions/me").hasRole("CONDUCTEUR")
-                .requestMatchers(HttpMethod.POST, "/api/missions/*/start").hasRole("CONDUCTEUR")
-                .requestMatchers(HttpMethod.POST, "/api/missions/*/return").hasRole("CONDUCTEUR")
-                .requestMatchers(HttpMethod.POST, "/api/missions/*/validate").hasAnyRole("ADMIN", "GESTIONNAIRE")
-                .requestMatchers(HttpMethod.POST, "/api/missions/*/maintenance").hasAnyRole("ADMIN", "GESTIONNAIRE")
-                .requestMatchers(HttpMethod.POST, "/api/missions/*/fuel").hasRole("CONDUCTEUR")
+                .requestMatchers("/api/auth/login", "/api/auth/register").permitAll()
+                .requestMatchers("/actuator/health", "/actuator/health/**").permitAll()
+                .requestMatchers(org.springframework.http.HttpMethod.OPTIONS, "/**").permitAll()
                 .anyRequest().authenticated()
             )
-            .httpBasic(basic -> {})
             .addFilterBefore(tokenAuthFilter, UsernamePasswordAuthenticationFilter.class);
 
         return http.build();
